--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
-    "react": "^19.1.0",
+    "framer-motion": "^12.23.12",
+    "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.1.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
