--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "^5.0.1",
+    "styled-jsx": "^5.1.7",
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
     "web-vitals": "^2.1.4",
